# HeadMapButtonClick

./: CMakeLists.txt  README.md
config/: heatmap_config.json
demo/: main.cpp
plugin/: HeatMapOverlayPlugin.cpp  HeatMapOverlayPlugin.h
scripts/: generate_sample_heatmap.py
src/: HeatMapOverlay.cpp  HeatMapOverlay.h
